# instanttactoe

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  deploy.sh  run.sh  rust-toolchain.toml
abi/: Cargo.toml
abi/src/: lib.rs
contracts/src/: contract.rs  lib.rs  service.rs
frontend/: .env.local  .env.production  Dockerfile.frontend  eslint.config .js  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/pages/: globals.css  index.js
frontend/public/: index.html  manifest.json  robots.txt
frontend/public/js/: shim.js
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/abi/: types.ts
frontend/src/components/: AuthWrapper.tsx  Chat.tsx  GameBoard.tsx  Guild.tsx  Lobby.tsx  Navigation.tsx  SoundPreloader.tsx  TicTacToe.tsx  Tournament.tsx  WalletConnect.tsx
frontend/src/config/: sounds.ts
frontend/src/contexts/: GameContext.tsx  TournamentContext.tsx
frontend/src/hooks/: useGameSounds.ts  useLineraGame.ts  useTournament.ts
frontend/src/lib/: dynamic-signer.ts  linera-adapter.ts
frontend/src/pages/: Game.tsx  GameCreationPage.tsx  Guild.tsx  Home.tsx  LobbyPage.tsx  Profile.tsx  Tournament.tsx
frontend/src/styles/: cyber-theme.css
frontend/src/types/: index.ts
frontend/src/utils/: dynamic-signer.ts  gameLogic.ts  linera-adapter.ts  linera.ts
game/: Cargo.toml
game/src/: contract.rs  lib.rs  service.rs  state.rs
