[workspace]
resolver = "2"
members = [
    "abi",
    "game",
]

[workspace.dependencies]
# Async GraphQL
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }

# Linera
linera-sdk = { version = "0.15.8" }
linera-views = { version = "0.15.8" }

# Other deps
futures = { version = "0.3" }
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }
log = { version = "0.4.27" }
rand = { version = "0.8.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.40", features = ["rt", "sync"] }

# Local packages
abi = { path = "./abi" }
game = { path = "./game" }

[profile.release]
debug = true
lto = true
opt-level = 's'
strip = 'debuginfo'
